--- a/index.html
+++ b/index.html
@@ -258,6 +258,8 @@ ul.task-list li input[type="checkbox"] {
 <li><a href="https://github.com/peerchemist/finta">finta</a> - Common financial technical analysis indicators implemented in Pandas.</li>
 <li><a href="https://github.com/cirla/tulipy">Tulipy</a> - Financial Technical Analysis Indicator Library (Python bindings for <a href="https://github.com/TulipCharts/tulipindicators">tulipindicators</a>)</li>
 <li><a href="https://github.com/Boulder-Investment-Technologies/lppls">lppls</a> - A Python module for fitting the <a href="https://en.wikipedia.org/wiki/Didier_Sornette#The_JLS_and_LPPLS_models">Log-Periodic Power Law Singularity (LPPLS)</a> model.</li>
+<li><a href="https://github.com/nardew/talipp">talipp</a> - Incremental technical analysis library for Python.</li>
+<li><a href="https://github.com/mr-easy/streaming_indicators">streaming_indicators</a> - A python library for computing technical analysis indicators on streaming data.</li>
 </ul>
 </section>
 <section id="trading-backtesting" class="level3">
@@ -274,7 +276,7 @@ ul.task-list li input[type="checkbox"] {
 <li><a href="https://github.com/llazzaro/analyzer">analyzer</a> - Python framework for real-time financial and backtesting trading strategies.</li>
 <li><a href="https://github.com/pmorissette/bt">bt</a> - Flexible Backtesting for Python.</li>
 <li><a href="https://github.com/backtrader/backtrader">backtrader</a> - Python Backtesting library for trading strategies.</li>
-<li><a href="https://github.com/thalesians/pythalesians">pythalesians</a> - Python library to backtest trading strategies, plot charts, seamlessly download market data, analyse market patterns etc.</li>
+<li><a href="https://github.com/thalesians/pythalesians">pythalesians</a> - Python library to backtest trading strategies, plot charts, seamlessly download market data, analyze market patterns etc.</li>
 <li><a href="https://github.com/ematvey/pybacktest">pybacktest</a> - Vectorized backtesting framework in Python / pandas, designed to make your backtesting easier.</li>
 <li><a href="https://github.com/gbeced/pyalgotrade">pyalgotrade</a> - Python Algorithmic Trading Library.</li>
 <li><a href="https://github.com/gbeced/basana">basana</a> - A Python async and event driven framework for algorithmic trading, with a focus on crypto currencies.</li>
@@ -286,12 +288,12 @@ ul.task-list li input[type="checkbox"] {
 <li><a href="https://github.com/cuemacro/finmarketpy">finmarketpy</a> - Python library for backtesting trading strategies and analyzing financial markets.</li>
 <li><a href="https://github.com/metaperl/binary-martingale">binary-martingale</a> - Computer program to automatically trade binary options martingale style.</li>
 <li><a href="https://github.com/foolcage/fooltrader">fooltrader</a> - the project using big-data technology to provide an uniform way to analyze the whole market.</li>
-<li><a href="https://github.com/zvtvz/zvt">zvt</a> - the project using sql,pandas to provide an uniform and extendable way to record data,computing factors,select securites, backtesting,realtime trading and it could show all of them in clearly charts in realtime.</li>
+<li><a href="https://github.com/zvtvz/zvt">zvt</a> - the project using sql, pandas to provide an uniform and extendable way to record data, computing factors, select securities, backtesting, realtime trading and it could show all of them in clearly charts in realtime.</li>
 <li><a href="https://github.com/alpacahq/pylivetrader">pylivetrader</a> - zipline-compatible live trading library.</li>
 <li><a href="https://github.com/alpacahq/pipeline-live">pipeline-live</a> - zipline’s pipeline capability with IEX for live trading.</li>
 <li><a href="https://github.com/quantrocket-llc/zipline-extensions">zipline-extensions</a> - Zipline extensions and adapters for QuantRocket.</li>
 <li><a href="https://github.com/quantrocket-llc/moonshot">moonshot</a> - Vectorized backtester and trading engine for QuantRocket based on Pandas.</li>
-<li><a href="https://github.com/robertmartin8/PyPortfolioOpt">PyPortfolioOpt</a> - Financial portfolio optimisation in python, including classical efficient frontier and advanced methods.</li>
+<li><a href="https://github.com/robertmartin8/PyPortfolioOpt">PyPortfolioOpt</a> - Financial portfolio optimization in python, including classical efficient frontier and advanced methods.</li>
 <li><a href="https://github.com/tradytics/eiten">Eiten</a> - Eiten is an open source toolkit by Tradytics that implements various statistical and algorithmic investing strategies such as Eigen Portfolios, Minimum Variance Portfolios, Maximum Sharpe Ratio Portfolios, and Genetic Algorithms based Portfolios.</li>
 <li><a href="https://github.com/dppalomar/riskparity.py">riskparity.py</a> - fast and scalable design of risk parity portfolios with TensorFlow 2.0</li>
 <li><a href="https://github.com/hudson-and-thames/mlfinlab">mlfinlab</a> - Implementations regarding “Advances in Financial Machine Learning” by Marcos Lopez de Prado. (Feature Engineering, Financial Data Structures, Meta-Labeling)</li>
@@ -355,6 +357,7 @@ ul.task-list li input[type="checkbox"] {
 <li><a href="https://github.com/dcajasn/Riskfolio-Lib">Riskfolio-Lib</a> - Portfolio Optimization and Quantitative Strategic Asset Allocation in Python.</li>
 <li><a href="https://github.com/stefan-jansen/empyrical-reloaded">empyrical-reloaded</a> - Common financial risk and performance metrics. <a href="https://github.com/quantopian/empyrical">empyrical</a> fork.</li>
 <li><a href="https://github.com/stefan-jansen/pyfolio-reloaded">pyfolio-reloaded</a> - Portfolio and risk analytics in Python. <a href="https://github.com/quantopian/pyfolio">pyfolio</a> fork.</li>
+<li><a href="https://github.com/fortitudo-tech/fortitudo.tech">fortitudo.tech</a> - Conditional Value-at-Risk (CVaR) portfolio optimization and Entropy Pooling views / stress-testing in Python.</li>
 </ul>
 </section>
 <section id="factor-analysis" class="level3">
@@ -447,6 +450,7 @@ ul.task-list li input[type="checkbox"] {
 <li><a href="https://github.com/dr-leo/pandaSDMX">pandaSDMX</a> - Python package that implements SDMX 2.1 (ISO 17369:2013), a format for exchange of statistical data and metadata used by national statistical agencies, central banks, and international organisations.</li>
 <li><a href="https://github.com/LenkaV/CIF">cif</a> - Python package that include few composite indicators, which summarize multidimensional relationships between individual economic indicators.</li>
 <li><a href="https://github.com/theOGognf/finagg">finagg</a> - finagg is a Python package that provides implementations of popular and free financial APIs, tools for aggregating historical data from those APIs into SQL databases, and tools for transforming aggregated data into features useful for analysis and AI/ML.</li>
+<li><a href="https://github.com/JerBouma/FinanceDatabase">FinanceDatabase</a> - This is a database of 300.000+ symbols containing Equities, ETFs, Funds, Indices, Currencies, Cryptocurrencies and Money Markets.</li>
 </ul>
 </section>
 <section id="excel-integration" class="level3">
@@ -789,7 +793,9 @@ ul.task-list li input[type="checkbox"] {
 <li><a href="https://github.com/JoaoJungblut/QuantFinanceTraining">QuantFinanceTraining</a> - This repository contains codes that were executed during my training in the CQF (Certificate in Quantitative Finance). The codes are organized by class, facilitating navigation and reference.</li>
 <li><a href="https://github.com/YannickKae/Statistical-Learning-based-Portfolio-Optimization">Statistical-Learning-based-Portfolio-Optimization</a> - This R Shiny App utilizes the Hierarchical Equal Risk Contribution (HERC) approach, a modern portfolio optimization method developed by Raffinot (2018).</li>
 <li><a href="https://github.com/attack68/book_irds3">book_irds3</a> - Code repository for Pricing and Trading Interest Rate Derivatives.</li>
-<li><a href="https://github.com/RichardS0268/Autoencoder-Asset-Pricing-Models">Autoencoder-Asset-Pricing-Models</a> - Reimplementation of Autoencoder Asset Pricing Models (<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3335536">GKX, 2019</a>)</li>
+<li><a href="https://github.com/RichardS0268/Autoencoder-Asset-Pricing-Models">Autoencoder-Asset-Pricing-Models</a> - Reimplementation of Autoencoder Asset Pricing Models (<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3335536">GKX, 2019</a>).</li>
+<li><a href="https://github.com/shashankvemuri/Finance">Finance</a> - 150+ quantitative finance Python programs to help you gather, manipulate, and analyze stock market data.</li>
+<li><a href="https://github.com/ram-ki/101_formulaic_alphas">101_formulaic_alphas</a> - Implemention of <a href="https://arxiv.org/ftp/arxiv/papers/1601/1601.00991.pdf">101 formulaic alphas</a> using qstrader.</li>
 </ul>
 
 
